# scaffie

./: .gitignore  pyproject.toml
scaffolder/: __main__.py  config.py  renderer.py  utils.py
tests/demo_yield_from/: environment.yaml
tests/demo_yield_from/{% yield value from app.models %}{{ value.name }}{% endyield %}/{% set A='1234' %}{{A}}/: test.py.j2  {{A}}.py
