[tool.poetry]
name = "simple-scaffolder"
version = "0.1.0"
description = ""
authors = ["clogic <choiseungil29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
pydantic = "^2.9.2"
plumbum = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
